--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -28,3 +28,7 @@ en:
       carrierwave_download_error: "Couldn't download image."
       extension_whitelist_error: "You are not allowed to upload %{extension} files, allowed types: %{allowed_types}"
       extension_blacklist_error: "You are not allowed to upload %{extension} files, prohibited types: %{prohibited_types}"
+  pundit:
+    default: 'You cannot perform this action.'
+    post_policy:
+     destroy?: 'You cannot destroy this post!'
