--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -32,3 +32,4 @@ en:
     default: 'You cannot perform this action.'
     post_policy:
      destroy?: 'You cannot destroy this post!'
+     edit?: 'You cannot edit this post!'
