--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -31,5 +31,9 @@ en:
   pundit:
     default: 'You cannot perform this action.'
     post_policy:
-     destroy?: 'You cannot destroy this post!'
-     edit?: 'You cannot edit this post!'
+      destroy?: 'You cannot destroy this post!'
+      edit?: 'You cannot edit this post!'
+    comment_policy:
+      destroy?: 'You cannot destroy this item!'
+      edit?: 'You cannot edit this item!'
+      buy?: 'You cannot buy this item!'
